# afro

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  _vcpkg.json  bootstrap-vcpkg.sh  readme.md  vcpkg.json
cmake/: BuildInfo.cmake  ClangTidy.cmake  CompileOptions.cmake  Cppcheck.cmake  FindFruit.cmake  FindOpenImageIO.cmake  Findclang_tidy.cmake  Findcppcheck.cmake  GitInfo.cmake  HealthCheck.cmake
data/: readme.md
deploy/: CMakeLists.txt
docs/: CMakeLists.txt  operators.md
resources/: readme.md
resources/shaders/material/: LICENSE  blend.frag  blur.frag  channel_select.frag  curve.frag  uniform_color.frag
source/: CMakeLists.txt
source/afro/: CMakeLists.txt  di.h
source/afro/common/: CMakeLists.txt  curve.h  graph_common.h  image_texture.h  material_node_definition.h  material_nodes.h  material_processor.h
source/afro/common/data/: CMakeLists.txt  uuid.cpp  uuid.h
source/afro/common/interfaces/: CMakeLists.txt  command.h  object.h
source/afro/common/intern/: CMakeLists.txt  context.cpp  data.cpp  folder.cpp  graph_common.cpp  image_texture.cpp  material_engine.cpp  material_node_definition.cpp
source/afro/core/: CMakeLists.txt  context.cpp  context.h  curve.cpp  curve.h  data.cpp  data.h  engine_utils.h  folder.cpp  folder.h  function_graph.cpp  function_graph.h  graph_common.cpp  image_texture.cpp  image_texture.h  material_engine.h  material_graph.cpp  material_graph.h  material_nodes.cpp  material_nodes.h  packed_file.h  property.cpp  property.h  uuid.cpp  uuid.h
source/afro/core/data/: uuid.cpp  uuid.h
source/afro/core/interfaces/: CMakeLists.txt  command.h
source/afro/core/intern/: CMakeLists.txt  curve.cpp  function_graph.cpp  material_graph.cpp  material_nodes.cpp  material_processor.cpp  property.cpp  uuid.cpp
source/afro/curve/: CMakeLists.txt
source/afro/curve/data/: CMakeLists.txt  curve.cpp  curve.h
source/afro/curve/ui/: CMakeLists.txt  color_curve_editor.cpp  color_curve_editor.h
source/afro/graph/: CMakeLists.txt
source/afro/graph/commands/: CMakeLists.txt  add_link_command.h  add_node_command.h  delete_links_command.h
source/afro/graph/data/: CMakeLists.txt  graph.cpp  graph.h  graph_item.cpp  graph_item.h  link.h  node.cpp  node.h
source/afro/graph/ui/: CMakeLists.txt  graph_editor.cpp  graph_editor.h  id_map.h
source/afro/imnodes/: CMakeLists.txt  imnodes.cpp  imnodes.h  imnodes_internal.h
source/afro/io/: CMakeLists.txt  image.cpp  image.h
source/afro/material_graph/: CMakeLists.txt  di.h
source/afro/material_graph/data/: CMakeLists.txt  material_graph.cpp  material_graph.h  material_node.cpp  material_node.h  material_node_definition.cpp  material_node_definition.h
source/afro/material_graph/definitions/: CMakeLists.txt  definitions.cpp  definitions.h
source/afro/material_graph/engine/: CMakeLists.txt  material_engine.cpp  material_engine.h  material_processor.cpp  material_processor.h  output_buffer.cpp  output_buffer.h
source/afro/material_graph/ui/: CMakeLists.txt  material_editor.cpp  material_editor.h
source/afro/property/: CMakeLists.txt  di.h
source/afro/property/data/: CMakeLists.txt  enum_item.h  property.h  property_definition.h  property_value.h
source/afro/property/ui/: CMakeLists.txt  property_editor.cpp  property_editor.h  property_ui_defaults.h  property_widgets.cpp  property_widgets.h
source/afro/store/: CMakeLists.txt  di.h
source/afro/store/commands/: CMakeLists.txt  add_folder_command.cpp  add_folder_command.h  delete_folder_command.cpp  delete_folder_command.h
source/afro/store/data/: CMakeLists.txt  data.cpp  data.h  folder.cpp  folder.h
source/afro/store/interfaces/: folder_item.h
source/afro/store/ui/: CMakeLists.txt  outliner.cpp  outliner.h
source/afro/ui/: CMakeLists.txt  debug_ui.cpp  debug_ui.h  di.h  icons.cpp  icons.h  icons_font_awesome_5.h  theme.cpp  theme.h  ui_main.cpp  ui_main.h  ui_utils.cpp  ui_utils.h  ui_window.cpp  ui_window.h
source/afro/ui/data/: CMakeLists.txt  icons.cpp  icons.h  main_window.cpp  main_window.h
source/afro/ui/editors/: CMakeLists.txt  material_editor.cpp  material_editor.h  outliner.cpp  outliner.h  parameters_editor.cpp  parameters_editor.h  preferences_editor.cpp  preferences_editor.h  texture_viewer.cpp  texture_viewer.h
source/afro/ui/interfaces/: CMakeLists.txt  widget.h  window.h
source/afro/ui/utils/: CMakeLists.txt  ui_utils.cpp  ui_utils.h
source/afro/undo/: CMakeLists.txt  di.h  folder_ops.cpp  folder_ops.h  material_graph_ops.cpp  material_graph_ops.h  operator.cpp  operator.h  undo.cpp  undo.h
source/afro/undo/data/: CMakeLists.txt  undo_stack_impl.cpp  undo_stack_impl.h
source/afro/undo/interfaces/: CMakeLists.txt  undo_stack.h
source/afro/undo/ui/: CMakeLists.txt  debug_window.cpp  debug_window.h
source/afro/utils/: CMakeLists.txt  assert.h  asset.h  build_info.h.in  constants.h  embed_data.h  log.cpp  log.h  math.cpp  math.h  paths.cpp  paths.h  preferences.cpp  preferences.h  translation.cpp  translation.h
source/app/: CMakeLists.txt  main.cpp
source/embed-data/: CMakeLists.txt  main.cpp
source/tests/: CMakeLists.txt  material_graph_test.cpp  undo_test.cpp
vcpkg_overlay_ports/imnodes/: CMakeLists.txt  portfile.cmake
